--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "godot-cpp"]
 	path = godot-cpp
 	url = https://github.com/GodotNativeTools/godot-cpp
+[submodule "zhetapi"]
+	path = zhetapi
+	url = https://github.com/vedavamadathil/zhetapi.git
