Models in each agent

--- a/Sconstruct
+++ b/Sconstruct
@@ -15,8 +15,13 @@ opts.Add(PathVariable('target_path', 'The path where the lib is installed.', 'bi
 opts.Add(PathVariable('target_name', 'The library name.', 'libagent', PathVariable.PathAccept))
 
 # Local dependency paths, adapt them to your setup
+zhetapi_engine_path = "zhetapi/engine/"
 godot_headers_path = "godot-cpp/godot_headers/"
+
 cpp_bindings_path = "godot-cpp/"
+zhetapi_library_path = "zhetapi/"
+
+zhetapi_library = "libzhp"
 cpp_library = "libgodot-cpp"
 
 # only support 64 at this time..
@@ -92,8 +97,8 @@ else:
 cpp_library += '.' + str(bits)
 
 # make sure our binding library is properly includes
-env.Append(CPPPATH=['.', godot_headers_path, cpp_bindings_path + 'include/', cpp_bindings_path + 'include/core/', cpp_bindings_path + 'include/gen/'])
-env.Append(LIBPATH=[cpp_bindings_path + 'bin/'])
+env.Append(CPPPATH=['.', zhetapi_engine_path, godot_headers_path, cpp_bindings_path + 'include/', cpp_bindings_path + 'include/core/', cpp_bindings_path + 'include/gen/'])
+env.Append(LIBPATH=[cpp_bindings_path + 'bin/', zhetapi_library_path + 'bin/'])
 env.Append(LIBS=[cpp_library])
 
 # tweak this if you want to use different folders, or more folders, to store your source code in.
