--- a/config.json
+++ b/config.json
@@ -11,11 +11,11 @@
 
 	"Exploration": {
 		"Start": 300,
-		"Delta": 0.00015,
+		"Delta": 0.0015,
 		"Minimum": 0.01
 	},
 
-	"Alpha": 7.5e-3,
+	"Alpha": 0.1,
 	"Minimum Velocity": -1.0,
 	"Maximum Velocity": 15.0,
 	"Experience Batch Size": 500,
